Update Locale constructor calls to use Locale.of