@@ -66,7 +66,7 @@ public class StringUtilTestCase {
         assertEquals("410.00 TB", StringUtil.formatBytes(450799767388160L, locale), "Error in formatBytes()");
         assertEquals("4413.43 TB", StringUtil.formatBytes(4852617603375432L, locale), "Error in formatBytes()");
 
-        locale = new Locale("no", "", "");
+        locale = Locale.of("no", "", "");
         assertEquals("918 B", StringUtil.formatBytes(918L, locale), "Error in formatBytes()");
         assertEquals("1023 B", StringUtil.formatBytes(1023L, locale), "Error in formatBytes()");
         assertEquals("1 KB", StringUtil.formatBytes(1024L, locale), "Error in formatBytes()");
@@ -124,12 +124,12 @@ public class StringUtilTestCase {
 
     @Test
     public void testParseLocale() {
-        assertEquals(new Locale("en"), StringUtil.parseLocale("en"), "Error in parseLocale()");
-        assertEquals(new Locale("en"), StringUtil.parseLocale("en_"), "Error in parseLocale()");
-        assertEquals(new Locale("en"), StringUtil.parseLocale("en__"), "Error in parseLocale()");
-        assertEquals(new Locale("en", "US"), StringUtil.parseLocale("en_US"), "Error in parseLocale()");
-        assertEquals(new Locale("en", "US", "WIN"), StringUtil.parseLocale("en_US_WIN"), "Error in parseLocale()");
-        assertEquals(new Locale("en", "", "WIN"), StringUtil.parseLocale("en__WIN"), "Error in parseLocale()");
+        assertEquals(Locale.of("en"), StringUtil.parseLocale("en"), "Error in parseLocale()");
+        assertEquals(Locale.of("en"), StringUtil.parseLocale("en_"), "Error in parseLocale()");
+        assertEquals(Locale.of("en"), StringUtil.parseLocale("en__"), "Error in parseLocale()");
+        assertEquals(Locale.of("en", "US"), StringUtil.parseLocale("en_US"), "Error in parseLocale()");
+        assertEquals(Locale.of("en", "US", "WIN"), StringUtil.parseLocale("en_US_WIN"), "Error in parseLocale()");
+        assertEquals(Locale.of("en", "", "WIN"), StringUtil.parseLocale("en__WIN"), "Error in parseLocale()");
     }
 
     @Test
